# a2a-mcp-demo

a2a/agents/adk_agent/: README.md  agent.py  pyproject.toml
a2a/agents/crewai_agent/: __main__.py  agent.py  pyproject.toml
a2a/agents/langgraph_agent/: agent.py  agent_executor.py
a2a/hosts/: readme.md
a2a/hosts/adk_client/: README.md  pyproject.toml
a2a/hosts/adk_client/adk_client_agent/: agent.py  agent_server_connection.py
a2a/hosts/cli/: push_notification_listener.py  pyproject.toml
a2a/hosts/host_agent/: README.md
a2a/hosts/host_agent/host/: agent.py  host_agent.py
agents/adk_agent/: __main__.py  agent_executor.py  test_client.py
agents/crewai_agent/: README.md  agent_executor.py
agents/langgraph_agent/: README.md  __main__.py  pyproject.toml
hosts/adk_client/: main.py
hosts/adk_client/adk_client_agent/: a2a_host.py
hosts/cli/: __main__.py
hosts/host_agent/: __main__.py  pyproject.toml  routing_agent.py
mcp/ts-mcp-server/: .gitignore  package-lock.json  package.json  railway.json  tsconfig.json
mcp/ts-mcp-server/src/client/: stdioClient.ts  streamableHTTPSClient.ts
mcp/ts-mcp-server/src/server/: stdioTools.ts  streamableHTTPSTools.ts
mcp/ts-mcp-server/src/shared/: calculatorTools.ts
