[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.10",
    "asyncclick>=8.1.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "jwcrypto>=1.5.6",
    "jwt>=1.4.0",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.3.6",
    "starlette>=0.46.2",
    "uvicorn>=0.35.0",
]
